api/tests/snapshots/auth_family__local_login_credentialed_200.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 200, \"body\": body})"
---
{
  "body": {
    "token": "<JWT>",
    "user": {
      "avatar_url": null,
      "email": "alice@example.com",
      "id": "<ID>",
      "name": "Alice"
    }
  },
  "status": 200
}
