api/tests/snapshots/auth_family__local_login_missing_password_400.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 400, \"body\": body})"
---
{
  "body": {
    "error": "Username and password are required"
  },
  "status": 400
}
