api/tests/snapshots/auth_family__local_login_selfhost_no_body_200.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 200, \"body\": body})"
---
{
  "body": {
    "token": "<JWT>",
    "user": {
      "avatar_url": null,
      "email": "selfhost_default_user@localhost",
      "id": 1,
      "name": "Me"
    }
  },
  "status": 200
}
