api/tests/snapshots/auth_family__local_login_wrong_password_401.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 401, \"body\": body})"
---
{
  "body": {
    "error": "Invalid credentials"
  },
  "status": 401
}
