api/tests/snapshots/auth_family__local_register_bearer_201.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 201, \"body\": body})"
---
{
  "body": {
    "status": "success",
    "user": {
      "avatar_url": null,
      "email": "alice@example.com",
      "id": "<ID>",
      "name": "Alice"
    }
  },
  "status": 201
}
