api/tests/snapshots/auth_family__local_register_duplicate_409.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 409, \"body\": body})"
---
{
  "body": {
    "error": "Username is already taken"
  },
  "status": 409
}
