api/tests/snapshots/auth_family__local_register_short_password_400.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 400, \"body\": body})"
---
{
  "body": {
    "error": "Password must be at least 8 characters"
  },
  "status": 400
}
