api/tests/snapshots/auth_family__logout_200.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 200, \"body\": body})"
---
{
  "body": {
    "status": "success"
  },
  "status": 200
}
