api/tests/snapshots/auth_family__verify_cookie_with_csrf_headers_200.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 200, \"body\": body})"
---
{
  "body": {
    "user": {
      "avatar_url": null,
      "email": "selfhost_default_user@localhost",
      "id": 1,
      "name": "Me"
    }
  },
  "status": 200
}
