api/tests/snapshots/auth_family__verify_cookie_without_csrf_headers_403.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 403, \"body\": body})"
---
{
  "body": {
    "error": "Content-Type must be application/json"
  },
  "status": 403
}
