api/tests/snapshots/auth_family__verify_invalid_token_401.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 401, \"body\": body})"
---
{
  "body": {
    "error": "Invalid token"
  },
  "status": 401
}
