api/tests/snapshots/auth_family__verify_no_auth_401.snap
---
source: tests/auth_family.rs
expression: "json!({\"status\": 401, \"body\": body})"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
